reparse.output
Grammar

    0 $accept: commands $end

    1 commands: /* empty */
    2         | re

    3 re: re '+' term
    4   | term

    5 term: factor
    6     | term factor

    7 factor: factor '*'
    8       | '(' re ')'
    9       | t_SYMBOL
   10       | '@'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8
')' (41) 8
'*' (42) 7
'+' (43) 3
'@' (64) 10
error (256)
t_SYMBOL (258) 9


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
commands (10)
    on left: 1 2, on right: 0
re (11)
    on left: 3 4, on right: 2 3 8
term (12)
    on left: 5 6, on right: 3 4 6
factor (13)
    on left: 7 8 9 10, on right: 5 6 7


state 0

    0 $accept: . commands $end

    t_SYMBOL  shift, and go to state 1
    '('       shift, and go to state 2
    '@'       shift, and go to state 3

    $default  reduce using rule 1 (commands)

    commands  go to state 4
    re        go to state 5
    term      go to state 6
    factor    go to state 7


state 1

    9 factor: t_SYMBOL .

    $default  reduce using rule 9 (factor)


state 2

    8 factor: '(' . re ')'

    t_SYMBOL  shift, and go to state 1
    '('       shift, and go to state 2
    '@'       shift, and go to state 3

    re      go to state 8
    term    go to state 6
    factor  go to state 7


state 3

   10 factor: '@' .

    $default  reduce using rule 10 (factor)


state 4

    0 $accept: commands . $end

    $end  shift, and go to state 9


state 5

    2 commands: re .
    3 re: re . '+' term

    '+'  shift, and go to state 10

    $default  reduce using rule 2 (commands)


state 6

    4 re: term .
    6 term: term . factor

    t_SYMBOL  shift, and go to state 1
    '('       shift, and go to state 2
    '@'       shift, and go to state 3

    $default  reduce using rule 4 (re)

    factor  go to state 11


state 7

    5 term: factor .
    7 factor: factor . '*'

    '*'  shift, and go to state 12

    $default  reduce using rule 5 (term)


state 8

    3 re: re . '+' term
    8 factor: '(' re . ')'

    '+'  shift, and go to state 10
    ')'  shift, and go to state 13


state 9

    0 $accept: commands $end .

    $default  accept


state 10

    3 re: re '+' . term

    t_SYMBOL  shift, and go to state 1
    '('       shift, and go to state 2
    '@'       shift, and go to state 3

    term    go to state 14
    factor  go to state 7


state 11

    6 term: term factor .
    7 factor: factor . '*'

    '*'  shift, and go to state 12

    $default  reduce using rule 6 (term)


state 12

    7 factor: factor '*' .

    $default  reduce using rule 7 (factor)


state 13

    8 factor: '(' re ')' .

    $default  reduce using rule 8 (factor)


state 14

    3 re: re '+' term .
    6 term: term . factor

    t_SYMBOL  shift, and go to state 1
    '('       shift, and go to state 2
    '@'       shift, and go to state 3

    $default  reduce using rule 3 (re)

    factor  go to state 11
